TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement_Line_Item__c/Trade_Marketing_Agreement_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Trade Marketing Agreement Line Item</label>
    <nameField>
        <displayFormat>TMA-{00000000}</displayFormat>
        <label>TMA Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trade Marketing Agreement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>