TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement_Line_Item__c/fields/Allowance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Rate__c</fullName>
    <label>Allowance Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>