TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement_Line_Item__c/fields/Maximum_Allowance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Allowance_Rate__c</fullName>
    <description>Maximum allowance rate allowed on this line item.</description>
    <formula>Trade_Marketing_Agreement__r.Trade_Marketing_Agreement_Promotion__r.Maximum_Allowance_Rate__c</formula>
    <label>Maximum Allowance Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>