TradeMarketing/force-app/main/default/objects/Trade_Marketing_Agreement_Line_Item__c/fields/Trade_Marketing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Trade_Marketing_Agreement__c</fullName>
    <label>Trade Marketing Agreement</label>
    <referenceTo>Trade_Marketing_Agreement__c</referenceTo>
    <relationshipLabel>Trade Marketing Agreement Line Items</relationshipLabel>
    <relationshipName>Trade_Marketing_Agreement_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>